Login form: add margin bottom

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_footer.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_footer.scss
@@ -6,6 +6,7 @@
   align-items: center;
   background: var(--clr-secondary-400);
   min-height: 84px;
+  margin-top: 3.2rem;
   border-top: 2px solid var(--clr-accent);
   color: var(--clr-text-light);
 }
