--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
@@ -14,9 +14,9 @@
 
 .login-body {
   margin: auto;
-  padding: 64px;
+  padding: 6.4rem;
   background-color: var(--clr-neutral-400);
-  max-width: 480px;
+  max-width: 48rem;
 }
 
 .login-body h2 {
