PW Reset form: change heading + label, add info text

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
@@ -60,6 +60,11 @@
     margin-top: 1.6rem;
     color: var(--clr-primary-400);
   }
+
+  .pw-reset__msg {
+    font-size: var(--fs-200);
+    color: var(--clr-primary-400);
+  }
 }
 
 /* ****************************** */
