--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_views.scss
@@ -13,6 +13,8 @@
 /* **************************** */
 
 .login-body {
+  border: 1px solid var(--border-color);
+  border-radius: var(--border-radius);
   margin: auto;
   padding: 6.4rem;
   background-color: var(--clr-neutral-400);
