Change sign out icon

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -147,7 +147,7 @@
                                                 parentMenu="menu_account"
                                                 label="#{msgs.logout}"
                                                 action="#{LoginForm.logoutExternalUser}"
-                                                icon="fa fa-power-off box-icon-fix-menu" />
+                                                icon="fa fa-sign-out" />
                                         </ui:fragment>
                                         <ui:fragment rendered="#{LoginForm.showSSOLogoutPage}">
                                             <intranda:menuItem
@@ -156,7 +156,7 @@
                                                 parentMenu="menu_account"
                                                 label="#{msgs.logout}"
                                                 action="#{LoginForm.logoutOpenId}"
-                                                icon="fa fa-power-off box-icon-fix-menu" />
+                                                icon="fa fa-sign-out" />
                                         </ui:fragment>
 
                                     </ul>
