display actual value in overview for checkboxes; second contact must be filled if displayed;

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -955,7 +955,8 @@
                         classLeft="col-sm-12 col-md-10 flex-column"
                         classRight="col-sm-12 col-md-2"
                         showDisabledCheckBox="#{true}"
-                        showDisabledCheckBoxActivated="#{field.value}" />
+                        showDisabledCheckBoxActivated="#{field.value}" 
+                        secondValue="#{field.subValue}"/>
                 </ui:repeat>
 
             </section>
