Include helpModals in main plugin file

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -1094,6 +1094,8 @@
             </div>
         </ui:fragment>
 
+    	  <ui:include src="../includes/helpModals.xhtml" />
+
     </composite:implementation>
 
 </ui:composition>
