Add margin under journals upload form

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -73,6 +73,10 @@
     fill: var(--clr-primary-400);
 }
 
+#issueUploadForm {
+  margin-bottom: 5.6rem;
+}
+
 #issueUploadForm ~ form {
   margin-top: 3.2rem;
 }
