Style status items for `existing data` view

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -259,3 +259,150 @@ table button span {
 .deliveryPlugin .form-check table {
   width: calc(100% - 6.4rem)
 }
+
+/* ****************************** */
+/* DB: delivery: existing data   */
+/* **************************** */
+
+.existing-data form {
+  overflow: scroll;
+}
+
+.existing-data table {
+}
+
+.existing-data td {
+  word-break: break;
+  hyphens: auto;
+}
+
+.existing-data td:not(.box td) {
+  padding: 1.6rem;
+}
+
+.existing-data th {
+    min-width: 4rem;
+    padding: 1.6rem;
+}
+.existing-data table td > table {
+}
+
+.existing-data .button-link i {
+ width: 24px;
+   height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 8px;
+  background-color: var(--clr-primary-400);
+  color: #fff;
+  border-radius: var(--border-radius);
+  order: 1;
+  margin-left: 8px;
+}
+
+button ~ .box {
+  margin-top: 1.6rem;
+}
+.existing-data table tr > *  {
+  background-color: var(--clr-neutral-200)
+}
+
+.existing-data table td > table td {
+  display: flex;
+}
+
+.table-hover > tbody > tr:hover > * {
+  --bs-table-accent-bg: var(--clr-neutral-200);
+}
+
+@media (max-width: 2000px) {
+  .container.existing-data {
+    width: 100vw;
+  }
+}
+
+.small13 {
+    padding: 0 8px;;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+.small13 li {
+  list-style: none;
+  height: 3.2rem;
+  width: 4.8rem;
+}
+
+.status-done {
+  background-color: var(--clr-success);
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-check-circle' viewBox='0 0 16 16'%3E%3Cpath d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/%3E%3Cpath d='M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: var(--border-radius);
+
+}
+
+.status-open{
+	background-color: #e8860c;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-hourglass-top' viewBox='0 0 16 16'%3E%3Cpath d='M2 14.5a.5.5 0 0 0 .5.5h11a.5.5 0 1 0 0-1h-1v-1a4.5 4.5 0 0 0-2.557-4.06c-.29-.139-.443-.377-.443-.59v-.7c0-.213.154-.451.443-.59A4.5 4.5 0 0 0 12.5 3V2h1a.5.5 0 0 0 0-1h-11a.5.5 0 0 0 0 1h1v1a4.5 4.5 0 0 0 2.557 4.06c.29.139.443.377.443.59v.7c0 .213-.154.451-.443.59A4.5 4.5 0 0 0 3.5 13v1h-1a.5.5 0 0 0-.5.5zm2.5-.5v-1a3.5 3.5 0 0 1 1.989-3.158c.533-.256 1.011-.79 1.011-1.491v-.702s.18.101.5.101.5-.1.5-.1v.7c0 .701.478 1.236 1.011 1.492A3.5 3.5 0 0 1 11.5 13v1h-7z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: var(--border-radius);
+}
+
+.status-inwork, .status-inflight {
+  background-color: var(--clr-accent);
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-hourglass-split' viewBox='0 0 16 16'%3E%3Cpath d='M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1h-11zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2h-7zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48V8.35zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: var(--border-radius);
+}
+
+.status-locked{
+  background-color: var(--clr-primary-400);
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-lock-fill' viewBox='0 0 16 16'%3E%3Cpath d='M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: var(--border-radius);
+}
+
+.status-error{
+	background-color: var(--clr-danger);
+	background-image:
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='black' class='bi bi-exclamation-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z'/%3E%3C/svg%3E");
+	background-image:
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-exclamation-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z'/%3E%3C/svg%3E"),
+    linear-gradient(45deg, #e51400 25%, transparent 25%, transparent 50%, #e51400 50%, #e51400 75%, transparent 75%, transparent);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: var(--border-radius);
+}
+
+.status-deactivated{
+  background-color: var(--clr-neutral-600);
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-lightbulb-off-fill' viewBox='0 0 16 16'%3E%3Cpath d='M2 6c0-.572.08-1.125.23-1.65l8.558 8.559A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm10.303 4.181L3.818 1.697a6 6 0 0 1 8.484 8.484zM5 14.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5zM2.354 1.646a.5.5 0 1 0-.708.708l12 12a.5.5 0 0 0 .708-.708l-12-12z'/%3E%3C/svg%3E");
+  background-color: var(--clr-neutral-400);
+  border: 1px solid var(--clr-neutral-600);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: var(--border-radius);
+}
+
+.progressbar-status-error {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='black' class='bi bi-exclamation-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z'/%3E%3C/svg%3E");
+  background-color: var(--clr-neutral-600);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: var(--border-radius);
+}
+
+.info__no-data {
+  padding: 3.2rem 1.6rem;
+  background-color: var(--clr-neutral-200);
+  border: 1px solid var(--clr-neutral-300);
+  border-radius: var(--border-radius);
+  margin-bottom: 4.8rem;
+}
+
+
