Accessibility: show aria-label

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/header.xhtml
@@ -175,7 +175,7 @@
                 <a
                     href="external_index.xhtml"
                     class="me-auto"
-                    aria-label="#{plugin_rest_usercreation_backToLogin}">
+                    aria-label="#{msgs.plugin_rest_usercreation_backToLogin}">
                     <ui:include src="../includes/icon-logo-goobi.xhtml" />
                 </a>
                 <h1>
