Change title and favicon

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -56,7 +56,7 @@
     <meta
         name="builddate"
         content="#{HelperForm.buildDate}" />
-    <title><h:outputText value="#{HelperForm.applicationHeaderTitle} - #{HelperForm.version}" /></title>
+    <title><h:outputText value="#{msgs.plugin_dashboard_delivery_template_title}" /></title>
 
     <!-- ========================================
         CSS
@@ -124,7 +124,7 @@
     <!-- Favicon -->
     <link
         rel="shortcut icon"
-        href="template/img/favicon.ico" />
+        href="template/assets/favicon/favicon.ico" />
     <!-- Apple devices Homescreen icon -->
     <link
         rel="apple-touch-icon-precomposed"
