--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_layout.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_layout.scss
@@ -5,6 +5,8 @@ html {
 
 body {
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   width: 100vw;
 }
@@ -13,7 +15,7 @@ main {
   display: flex;
   align-items: center;
   flex-direction: column;
-  min-height: calc(100vh - var(--height-footer-and-nav));
+  flex: 1;
 }
 
 .common-region {
