Add upload modal for URLs

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
@@ -32,6 +32,16 @@
   color: var(--clr-text-light);
 }
 
+.btn-accent {
+  color: var(--clr-accent);
+  border: 1px solid var(--clr-accent);
+}
+
+.btn-accent:hover {
+  color: #fff;
+  background-color: var(--clr-accent);
+}
+
 /* ******************************* */
 /* FORM ELEMENTS (inputs etc)     */
 /* ***************************** */
