Missing user data: style warning messages + disable options

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_base.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_base.scss
@@ -68,6 +68,10 @@
   font-size: var(--fs-200);
 }
 
+.text-danger {
+  color: var(--clr-danger);
+}
+
 // Reset counter globally
 #login-body {
   counter-reset: section;
