--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_footer.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_footer.scss
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: var(--clr-secondary-400);
+  // background: var(--clr-secondary-400);
+  background: var(--clr-primary-400);
   min-height: 84px;
   margin-top: 3.2rem;
   border-top: 2px solid var(--clr-accent);
