--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/dashboard-delivery.scss
@@ -28,6 +28,19 @@
     border-radius: var(--border-radius);
 }
 
+.item.incomplete-user-data {
+  & > *:not(p) {
+    opacity: .65;
+  }
+
+  & .text-danger {
+    background: #fff;
+    border: 1px solid var(--border-color);
+    border-radius: var(--border-radius);
+    padding: 1.6rem;
+  }
+}
+
 .item__icons svg {
     margin: 0 .4rem;
     width: 3.2rem;
