--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_typography.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_typography.scss
@@ -60,6 +60,7 @@ h2 {
     text-transform: none;
     border: 0;
     font-size: 2.8rem;
+    hyphens: auto;
   }
   &__help {
     padding-right: 0;
