--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -1097,6 +1097,13 @@
 
     	  <ui:include src="../includes/helpModals.xhtml" />
 
+
+<script>
+function focusField (elem) {
+// do nothing
+}
+</script>
+
     </composite:implementation>
 
 </ui:composition>
